<resources>
    <string name="app_name">Procourt</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="procourt">PROCOURT \nО СЕРВИСЕ</string>
    <string name="about_service">О СЕРВИСЕ</string>
    <string name="text_about_service">Ищите партнеров для игры или тренеров с учетом Ваших требований и предпочтений</string>
    <string name="next">Далее</string>
    <string name="miss">Пропустить</string>
    <string name="second_intro_about_service">Приглашайте других пользователей на турниры и сохраняйте результаты игр в своем профиле</string>
    <string name="about_service_fird_intro">Бронируйте время на кортах и формируйте собственное расписание</string>
    <string name="authority">Авторизоваться</string>
    <string name="register">Зарегистрироваться</string>
    <string name="text_hello">Приветствуем Вас на портале Procourt! Для получения доступа ко всему функционалу мы рекомендуем Вам авторизоваться</string>
    <string name="register_title">PROCOURT \nРЕГИСТРАЦИЯ</string>
    <string name="couch_button_for_register">Тренер</string>
    <string name="player_button_for_register">Игрок</string>
    <string name="hint_name">Имя</string>
    <string name="input_surname">Фамилия</string>
    <string name="input_e_mail">E-mail</string>
    <string name="input_phone_number">Мобильный телефон</string>
    <string name="input_password">Пароль</string>
    <string name="input_confirm_password">Подтверждение пароля</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="already_have_an_account">Уже есть аккаунт? Войти</string>
    <string name="your_backet_is_empty">Ваша корзина пуста</string>
    <string name="menu_title" />
    <string name="your_bascket">Ваша корзина</string>
    <string name="get_pay">Перейти к оплате 3 500 р.</string>
    <string name="title_expand_text">Аренда корта корт %s в клубе \n %s</string>
    <string name="sum_text"> %s ₽ </string>
    <string name="from_date_time"> %s %s </string>
    <string name="till_date_time"> %s %s </string>
    <string name="discount_text"> %s ₽ </string>
    <string name="from">C:</string>
    <string name="till">До:</string>
    <string name="price">Цена:</string>
    <string name="discount">Скидка:</string>
    <string name="book_and_pay_cash">Забронировать и оплатить наличными</string>
    <string name="pay_online">Оплатить онлайн</string>
    <string name="via_club_count">С внутреннего счета в клубе</string>
    <string name="set_order">Оформить заказ</string>
    <string name="tools_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, comes from a line in section 1.10.32.</string>
    <string name="club_site"><b>Сайт</b></string>
    <string name="club_chat">Чат</string>
    <string name="club_courts">КОРТЫ</string>
    <string name="e_mail_auth">E-mail</string>
    <string name="sign_in_google_auth">Вход с Google ID</string>
    <string name="facebook_auth">Facebook</string>
    <string name="no_accaunt">Нет аккаунта?</string>
    <string name="register_auth">Зарегистрироваться</string>
    <string name="add_as_friend">В друзья</string>
    <string name="couch_level">УРОВЕНЬ</string>
    <string name="Friends">ДРУЗЬЯ</string>
    <string name="couch_location_title">ЛОКАЦИЯ</string>
    <string name="email_already_exist">Пользователь с таким e-mail (%s) уже существует. Пользователь с
    логином "%s" уже существует. </string>
    <string name="player">Игрок</string>
    <string name="enter">Войти</string>
    <string name="have_no_acc">Нет аккаунта? Зарегистрироваться</string>
    <string name="wrong_email_password">Ошибка /nневерный логин или пароль</string>
    <string name="no_email">Ошибка /nПожалуйста, введите E-mail</string>
    <string name="no_password">Ошибка /nПожалуйста, введите пароль</string>
    <string name="show_all">(показать всех)</string>
    <string name="feedback">Обратная связь \n\nВерсия %s</string>
    <string name="couch">Тренер</string>
    <string name="your_city">Ваш город</string>
    <string name="your_level">Ваш уровень</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="name_for_settings">Имя</string>
    <string name="surname_for_input">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="weight">Вес</string>
    <string name="height">Рост</string>
    <string name="experience">Опыт</string>
    <string name="about_yourself">О себе</string>
    <string name="your_phone_number">Ваш телефон</string>
    <string name="For_order_confirmation_only">Только для подтверждения заказа, ваш телефон будет скрыт.</string>
    <string name="country">Страна:</string>
    <string name="level">Уровень:</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="settings"><u>Настройки</u></string>
    <string name="settings_extra">Настройки</string>
    <string name="show_date_of_birth">Показывать дату рождения</string>
    <string name="show_day_month">Показывать день и месяц</string>
    <string name="hide">Скрыть полностью</string>
    <string name="email_for_ES">Почта</string>
    <string name="new_password_for_ES">Новый пароль</string>
    <string name="new_password_confirm">Подтверждение нового пароля</string>
    <string name="exit"><u>Выход</u></string>
    <string name="feedback_title">Обратная связь</string>
    <string name="app_error">Ошибки в приложении</string>
    <string name="pay_problems">Вопросы по оплате заказа</string>
    <string name="other">Предложения/пожелания/вопросы</string>
    <string name="add_screenshot">Прикрепить скриншот</string>
    <string name="title_for_message">Заголовок</string>
    <string name="message">Сообщение</string>
    <string name="sent">Отправить</string>
    <string name="choose_file">Выбрать \nфайл</string>
    <string name="agreement">Согласен с <u>договором-офертой</u></string>
    <string name="sent_password_to_email">Введите ваш e-mail ниже. \nИнструкции по восстановлению пароля \nбудут отправлены вам на E-mail</string>
    <string name="rp"><b>Напомнить пароль</b></string>
    <string name="input_name">Введите имя</string>
    <string name="tools_club_name"><b>Клуб Коломенский</b></string>
    <string name="auto_geo_location_text">Для автоматического определения Вашего местоположения необходимо включить геолокацию</string>
    <string name="turn_on">Включить</string>
    <string name="procourt_auth">PROCOURT \nАВТОРИЗАЦИЯ</string>
    <string name="vk_auth">Вконтакте</string>
    <string name="twitter">Twitter</string>
    <string name="background_already_registed">Уже есть аккаунт?</string>
    <string name="sign_in">Войти</string>
    <string name="court_club_bascket"><b>1 корт - Клуб “Коломенский”</b></string>
    <string name="date_time">Дата/Время:</string>
    <string name="amount">Количество:</string>
    <string name="price_bold"><b>2 600,00 ₽</b></string>
    <string name="percent"><b>0%</b></string>
    <string name="delete">Удалить</string>
    <string name="no_payment_club_info">Клуб не указал принимаемые методы оплаты.
        \nДля бронирования или получения информации о работе клуба,
        пожалуйста позвоните по телефону клуба - \n+7 (495) 287-39-00</string>
    <string name="about_club_item">Теннисный комплекс \'Коломенский\' был построен в 2008 году. Идеей было создание высококлассных кортов с удобствами и собственной террасой для от ...</string>
    <string name="statistics">СТАТИСТИКА</string>
    <string name="tournaments">ТУРНИРЫ</string>
    <string name="licence_agreement"><u>Лицензионное соглашение</u></string>
    <string name="confidential_agreement"><u>Политика конфиденциальности</u></string>
    <string name="version">Версия 1.02</string>
    <string name="to_play">Играть</string>
    <string name="unfriends">Убрать из \nдрузей</string>
    <string name="remove_account"><u>Удалить аккаунт</u></string>
    <string name="new_messeges">Новые сообщения</string>
    <string name="new_notifications">Новые уведомления</string>
    <string name="show_age">Показывать возраст</string>
    <string name="bp"><b>BOT Procourt</b></string>
    <string name="edit_news">Редактировать</string>
    <string name="delete_news">Удалить</string>
    <string name="cancel_news">отменить</string>
    <string name="video">ВИДЕО</string>
    <string name="photo">ФОТО</string>
    <string name="news">НОВОСТИ</string>
    <string name="add_news">ДОБАВИТЬ</string>
    <string name="news_title">Добавить новость</string>
    <string name="video_small">Видео</string>
    <string name="photo_small">Фото</string>
    <string name="create_news">Текст новости</string>
    <string name="write_comment">Добавить комментарий...</string>
    <string name="my_comment">Мой комментарий</string>
    <string name="loading">Загружено 100%</string>
    <string name="pick_photo">Выбрать файл</string>
    <string name="edit_news_title">Редактировать новость</string>
    <string name="cancel_edit_button">Отмена</string>
    <string name="filtr_title">Фильтр</string>
    <string name="rent_title">Арендовать корт</string>
    <string name="rent_date">ДАТА</string>
    <string name="rent_time">ВРЕМЯ</string>
    <string name="comforts">УДОБСТВА</string>
    <string name="cover">ПОКРЫТИЕ</string>
    <string name="hard">Хард</string>
    <string name="rubber">Резина</string>
    <string name="land">Грунт</string>
    <string name="green">Трава</string>
    <string name="parket">Паркет</string>
    <string name="apply">Применить</string>
    <string name="delete_time"><u>Удалить время</u></string>
    <string name="tools_tornament_title">NATALIA OPEN BY RAZLIV</string>
    <string name="rank_tournament">Разряд:</string>
    <string name="price_tournament">Стоимость участия:</string>
    <string name="place_tournament">Место проведения:</string>
    <string name="date_tournament">Дата проведения:</string>
    <string name="level_tournament">Уровень:</string>
    <string name="tools_input_rank">Парный женский</string>
    <string name="tools_input_price_tournament">4 000 руб.</string>
    <string name="tools_input_place_tournament">СК Разлив</string>
    <string name="tools_input_date_tournament">01.01.2022</string>
    <string name="tools_input_level_tournament">Средний</string>
    <string name="my_shedule_text">мое Расписание</string>
    <string name="add_time_for_playing_button">добавить время для игры</string>
    <string name="loop_event_switcher">Повторяющееся событие</string>
    <string name="see_clubs">Посмотреть клубы</string>
    <string name="tools_60_m">60 минут</string>
    <string name="tools_club_k">Клуб Коломенский</string>
    <string name="club_title">Клуб:</string>
    <string name="lasts_title">Продолжительность:</string>
    <string name="tools_choosen_time">16.00 -17.00 ВТ. 25.09</string>
    <string name="choosen_time">Выбранное время:</string>
    <string name="tools_sum">400 р.</string>
    <string name="sum">Сумма:</string>
</resources>