<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".fragment.search.CardTournamentChildFragment"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:id="@+id/tournament_child_more"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/ftccs_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/tools_tornament_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/dark_orange"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/ftccs_tournament_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:foregroundGravity="center"
            app:cardCornerRadius="160dp"
            app:cardElevation="16dp" >

            <ImageView
                android:id="@+id/ftacs_tournament_image_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_temp_pic" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ftccs_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="14dp"
                android:text="@string/rank_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:text="@string/price_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:text="@string/place_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:text="@string/date_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:text="@string/level_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ftccs_input_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tools_input_rank"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_input_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:text="@string/tools_input_price_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_input_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:text="@string/tools_input_place_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:text="@string/tools_input_date_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ftccs_input_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:text="@string/tools_input_level_tournament"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/first_intro_screen"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>