<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.search.CardCoverSearchFragment"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner_for_basket" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fcovcs_hard"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_blue_stroke"
            android:text="@string/hard"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/first_intro_screen"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fcovcs_rubber"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_corner_blue_stroke"
            android:text="@string/rubber"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/first_intro_screen"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fcovcs_land"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_corner_blue_stroke"
            android:text="@string/land"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/first_intro_screen"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fcovcs_green"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_corner_blue_stroke"
            android:text="@string/green"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/first_intro_screen"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fcovcs_parket"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_corner_blue_stroke"
            android:text="@string/parket"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/first_intro_screen"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>